contributed by Tomas Volf.  The reference implementation, which was used
so far, had a number of issues on Guile that made some of its interface
downright unusable (e.g., <https://bugs.gnu.org/72378>), non-conforming
(e.g., <https://bugs.gnu.org/72383>), or buggy (e.g.,
<https://bugs.gnu.org/72372>).

* New interfaces and functionality

** PEG parser

PEG grammar parser in (ice-9 peg string-peg) has been rewritten to cover
all the functionality defined in <https://bford.info/pub/lang/peg.pdf>.

The 'not-in-range' pattern was also added to (ice-9 peg); it is
available from PEG strings via '[^...]'.

** GOOPS: Introduce new forms method* and define-method*

The module (oop goops) now exports method* and define-method* which are
the counterparts of lambda* and define* in they provide support for
advanced argument handling such as optional and keyword arguments. The
implementation fully supports (next-method) calls, also for keyword
arguments. The new syntax is documented in the Guile Reference manual.

** New line or field iteration procedures in (ice-9 rdelim)

(ice-9 rdelim) has three new procedures: for-rdelim-from-port,
for-delimited-from-port and for-line-in-file. Of these, for-line-in-file
is helpful in the common situation where you want a procedure applied to
every line in a file.

** Improve 'load-foreign-library' handling of DLLs

The non-libltdl load-foreign-library introduced in 3.0.6 does not handle
some common cases with libtool-generated DLLs.  It has been updated
to search for DLLs that have a version number appended to the name
by libtool, such as libfoo-1.dll.

Also, it has been updated to do library renaming for MSYS.  On Cygwin,
when the #:rename-on-cygwin? option is #t, it already had the capability
to search for "libfoo" as "cygfoo.dll".  It has been updated to add the
capability to search for "libfoo" as "msys-foo.dll" on MSYS.

The load-foreign-library option #:rename-on-cygwin? has been changed to